--- a/src/controleur/.gitignore
+++ b/src/controleur/.gitignore
@@ -10,3 +10,7 @@
 /ControleurTerraria.class
 /ControleurTouches$2.class
 /ControleurInventaire.class
+/ControleurInventaire$1.class
+/ControleurItem.class
+/ControleurZoneInventaire.class
+/ControleurZoneInventaire$1.class
