Le craft marche !

--- a/src/controleur/.gitignore
+++ b/src/controleur/.gitignore
@@ -14,3 +14,6 @@
 /ControleurItem.class
 /ControleurZoneInventaire.class
 /ControleurZoneInventaire$1.class
+/ControleurCraft.class
+/Controleur.class
+/ControleurCraft$1.class
